# scrapping-noticias-email-sender

./: .gitignore  README.MD  pyproject.toml  script.py
email_sender/: email.py
langgraph/: classify_new_agent.py  email_designer.py  orquestre.py  state.py
model/: PROMPT.MD  email_classify_agent.py
scrapping/: scrapping_g1.py  scrapping_midia_ninja.py  utils.py
utils/: http_utils.py  json_utils.py
