[project]
name = "script-noticias-scrapping"
version = "0.1.0"
description = "Automation of News Validation and sending email of relevant News"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "langchain>=1.3.11",
    "langchain-google-genai>=4.2.6",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "yagmail>=0.16.0",
]
